@@ -1,3 +1,6 @@
+2002-09-14 20:00, v1.0.1:
+ - now lives on GBorg
+ - various packaging updates
 2002-06-12 17:30, v0.5.1:
  - no longer have to destroy one transaction before creating the next
 2002-06-07 17:15, v0.5.0:
